@@ -3827,6 +3827,7 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer,
 		pack32(build_ptr->first_job_id, buffer);
 
 		pack16(build_ptr->get_env_timeout, buffer);
+		packstr(build_ptr->gres_plugins, buffer);
 		pack16(build_ptr->group_info, buffer);
 
 		pack32(build_ptr->hash_val, buffer);
@@ -4251,6 +4252,8 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **build_buffer_ptr,
 		safe_unpack32(&build_ptr->first_job_id, buffer);
 
 		safe_unpack16(&build_ptr->get_env_timeout, buffer);
+		safe_unpackstr_xmalloc(&build_ptr->gres_plugins,
+				       &uint32_tmp, buffer);
 		safe_unpack16(&build_ptr->group_info, buffer);
 
 		safe_unpack32(&build_ptr->hash_val, buffer);
